--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="bio"><b>Hi my name is Darlyn</b>
         \nApprentice focused on mobile development, for  <i>Android</i> with <i>Kotlin</i>, I have basic knowledge in <i>Java</i>, <i>MySQL</i>, <i>Oracle</i>, and <i>Kotlin</i>.
         \nEager to continue learning and receive mentoring, in order to advance and grow professionally. Willing to learn new technologies and good software development practices.</string>
+    <string name="what_is_your_nickname">What is your Nickname?</string>
+    <string name="done">Done</string>
 </resources>
